# agent-guard

./: .env copy.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pages.yml
benchmarks/: __init__.py  bench_openclaw.py  scenarios.py
landing/: index.html
policies/: default.yaml  openclaw-hardened.yaml
src/agent_guard/: __init__.py  config.py  engine.py  main.py  metrics.py  models.py  providers.py  proxy.py  server.py  streaming.py
src/agent_guard/inspectors/: __init__.py  request.py  response.py
tests/: test_config.py  test_engine.py  test_inspectors.py  test_models.py  test_providers.py  test_server.py  test_streaming.py
